infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brain-agriculture-api-service
  namespace: brain-agriculture
  labels:
    app: brain-agriculture-api
spec:
  type: ClusterIP
  selector:
    app: brain-agriculture-api
  ports:
    - name: http
      port: 80
      targetPort: 3333
